# love_story_generator

./: .gitignore  README.md  config_template.yaml  main.py  pyproject.toml
src/models/: ai_client.py  novel.py
src/planner/: outline_generator.py
src/utils/: file_handler.py
src/writer/: chapter_generator.py
